--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./app"
+    "start": "nodemon  ./app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
