--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql2": "^2.1.0",
-    "nodemailer": "^6.4.8"
+    "nodemailer": "^6.4.8",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
