--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-redis": "^4.0.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.8",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
