--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -67,7 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "atm:build"
+            "browserTarget": "atm:build",
+            "proxyConfig": "src/app/configs/proxy.conf.json"
           },
           "configurations": {
             "production": {
