--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "ngx-cookie-service": "^3.0.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "websocket-extensions": "^0.1.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
